--- a/src/main/webapp/WEB-INF/vm/view_index.vm
+++ b/src/main/webapp/WEB-INF/vm/view_index.vm
@@ -48,7 +48,7 @@
                         <input type="checkbox"  value="无需复试" id="donotView"> 无需复试
                     </div>
                     <div class="m-firsttry-btn" id="goon" style="display:none">
-                        <button class="btn" if="finishAndContinue">结束面试 并继续</button>
+                        <button class="btn" id="finishAndContinue">结束面试 并继续</button>
                     </div>
                     <div class="m-firsttry-btn" id="havarest" style="display:none">
                         <button class="btn" if="finishAndRest">结束面试 休息一下</button>
