--- a/src/main/webapp/WEB-INF/vm/view_index.vm
+++ b/src/main/webapp/WEB-INF/vm/view_index.vm
@@ -51,10 +51,10 @@
                         <button class="btn" id="finishAndContinue">结束面试 并继续</button>
                     </div>
                     <div class="m-firsttry-btn" id="havarest" style="display:none">
-                        <button class="btn" if="finishAndRest">结束面试 休息一下</button>
+                        <button class="btn" id="finishAndRest">结束面试 休息一下</button>
                     </div>
                     <div class="m-firsttry-btn" id="nocome" style="display:none">
-                        <button class="btn" if="noComeFinish">候选人未到,继续下一个</button>
+                        <button class="btn" id="noComeFinish">候选人未到,继续下一个</button>
                     </div>
                 </div>
             </div>
