--- a/src/main/webapp/WEB-INF/vm/view_index.vm
+++ b/src/main/webapp/WEB-INF/vm/view_index.vm
@@ -38,6 +38,9 @@
                     <div class="m-firsttry-btn">
                         <button class="btn" id="getOneInterview">请安排一个面试者</button>
                     </div>
+                    <div class="m-firsttry-btn" id="nocome">
+                        <button class="btn" id="noComeFinish">候选人未到,继续下一个</button>
+                    </div>
                     <div class="m-firsttry-btn">
                         <button class="btn" id="beginToInterview">开始面试</button>
                     </div>
@@ -45,16 +48,13 @@
                         <button class="btn" id="finishInterview">结束面试</button>
                     </div>
                     <div class="m-firsttry-btn" id="noview" style="display:none">
-                        <input type="checkbox"  value="无需复试" id="donotView"> 无需复试
+                        <input type="checkbox"  name="determine" value="无需复试" id="donotView"> 无需复试
                     </div>
                     <div class="m-firsttry-btn" id="goon" style="display:none">
                         <button class="btn" id="finishAndContinue">结束面试 并继续</button>
                     </div>
                     <div class="m-firsttry-btn" id="havarest" style="display:none">
                         <button class="btn" id="finishAndRest">结束面试 休息一下</button>
-                    </div>
-                    <div class="m-firsttry-btn" id="nocome" style="display:none">
-                        <button class="btn" id="noComeFinish">候选人未到,继续下一个</button>
                     </div>
                 </div>
             </div>
