--- a/src/main/webapp/WEB-INF/vm/login.vm
+++ b/src/main/webapp/WEB-INF/vm/login.vm
@@ -14,7 +14,13 @@
         <link rel="stylesheet" href="/static/assets/css/reset.css">
         <link rel="stylesheet" href="/static/assets/css/supersized.css">
         <link rel="stylesheet" href="/static/assets/css/style.css">
-		<script src="/static/assets/js/login.js"></script>
+        <!-- Javascript -->
+        <script src="/static/assets/js/jquery-1.8.2.min.js" ></script>
+        <script src="/static/assets/js/supersized.3.2.7.min.js" ></script>
+        <script src="/static/assets/js/supersized-init.js" ></script>
+        <script src="/static/js/jquery.js"></script>
+        <script src="/static/assets/js/scripts.js" ></script>
+        <script src="/static/assets/js/login.js"></script>
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
             <script src="/static/assets/js/html5.js"></script>
@@ -35,12 +41,6 @@
                 <div class="error"><span>+</span></div>
             </form>
         </div>
-		
-        <!-- Javascript -->
-        <script src="/static/assets/js/jquery-1.8.2.min.js" ></script>
-        <script src="/static/assets/js/supersized.3.2.7.min.js" ></script>
-        <script src="/static/assets/js/supersized-init.js" ></script>
-        <script src="/static/assets/js/scripts.js" ></script>
 
     </body>
 </html>
