--- a/src/main/webapp/WEB-INF/vm/inter_login.vm
+++ b/src/main/webapp/WEB-INF/vm/inter_login.vm
@@ -14,9 +14,9 @@
         <link rel="stylesheet" href="/static/assets/css/reset.css">
         <link rel="stylesheet" href="/static/assets/css/supersized.css">
         <link rel="stylesheet" href="/static/assets/css/style.css">
-		<script src="/static/assets/js/login.js"></script>
 		<script type="text/javascript" src="/static/js/jquery.js"></script>
 		<script src="/static/js/recruit/recordphasecity.js"></script>
+		<script src="/static/assets/js/login.js"></script>
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
             <script src="/static/assets/js/html5.js"></script>
@@ -28,15 +28,16 @@
 
         <div class="page-container">
             <h1>校园招聘系统</h1>
+            <br>
             <form action="/interviewer/login" method="post">
+                <select name="" id="year" style="width:71px;height:30px;">
+				</select>
+				<select name="" id="phase" style="width:95px;height:30px;">
+				</select>
+				<select name="" id="city" style="width:71px;height:30px;">
+				</select>
                 <input type="text" name="username" class="username" placeholder="请输入您的用户名！">
                 <input type="password" name="password" class="password" placeholder="请输入您的用户密码！">
-                <select name="" id="year">
-				</select>
-				<select name="" id="phase">
-				</select>
-				<select name="" id="city">
-				</select>
                 <br>
                 <div class="msg" id="msg">${message}</div>
                 <button type="submit" onclick="checkUp();" class="submit_button">登录</button>
