--- a/src/main/webapp/WEB-INF/vm/student_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/student_manage.vm
@@ -26,6 +26,7 @@
 						<input type="text" class="input-small" placeholder="必填"  id="student_profession">
 						<label class="control-label" for="" >状态</label>
 						<select name="" id="student_state">
+							<option value="">请选择</option>
 							<option value="">未签到</option>
 							<option value="">签到</option>
 							<option value="">迟到</option>
