--- a/src/main/webapp/WEB-INF/vm/phase_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/phase_manage.vm
@@ -34,6 +34,7 @@
 			                  <td>$info.cityName</td>
 			                  <td>
 			                  	<a href="#" id="edit" onclick="addOrupd('$info.yearInfo','$info.phaseName')">添加或修改</a>
+			                  	<a href="#" id="edit" onclick="setOver('$info.yearInfo','$info.phaseName')">归档</a>
 			                  </td>
 			                </tr>
 			                #end
