--- a/src/main/webapp/WEB-INF/vm/viewer_monitor.vm
+++ b/src/main/webapp/WEB-INF/vm/viewer_monitor.vm
@@ -40,7 +40,7 @@
 				                  <td>$info.obj.twoView</td>
 				                  <td>$info.obj.determine</td>
 				                  <td>$info.additionalInfos.get(0)</td>
-				                  <td>$info.additionalInfos.get(1)</td>
+				                  <td>$!{info.additionalInfos.get(1)}</td>
 				                  <td>
 				                  	<a href="#" id="sel" onclick="doSel($info.obj.id)">查看</a>
 				                  </td>	
