--- a/src/main/webapp/WEB-INF/vm/phase_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/phase_manage.vm
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="/static/css/style.css" />
 	<link rel="stylesheet" href="/static/css/module.css" />
+	<link rel="stylesheet" href="/static/css/page.css" />
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
+	<script type="text/javascript" src="/static/js/jquery.page.js"></script>
 	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
 	<script type="text/javascript" src="/static/js/recruit/phase_manage.js"></script>
 </head>
@@ -42,6 +44,8 @@
 			            </table>
 					</div>
 				</div>
+				<input type="hidden" id="curr" value="4">
+				<div class="tcdPageCode"></div>
 			</div>
 		</div>
 		<div id="addphaseform" class="l-inner modal hide fade in" style="display:none;">
