--- a/src/main/webapp/WEB-INF/vm/pc/pc_index.vm
+++ b/src/main/webapp/WEB-INF/vm/pc/pc_index.vm
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>去哪儿网校园招聘</title>
 	<link rel="stylesheet" href="/static/pc/css/style.min.css" />
+	<script type="text/javascript" src="/static/js/jquery.js"></script>
 </head>
 <body>
 	<div class="wrap">
@@ -23,36 +24,6 @@
 		<div class="banner">
 			<ul class="nav">
 				<li class="item item-wait">
-					<div class="room">201</div>
-					<div class="state">-等待中-</div>
-					<div class="name">马宝存</div>
-					<div class="job">Dev</div>
-				</li>
-				<li class="item item-wait">
-					<div class="room">201</div>
-					<div class="state">-等待中-</div>
-					<div class="name">马宝存</div>
-					<div class="job">Dev</div>
-				</li>
-				<li class="item">
-					<div class="room">201</div>
-					<div class="state">-等待中-</div>
-					<div class="name">马宝存</div>
-					<div class="job">Dev</div>
-				</li>
-				<li class="item">
-					<div class="room">201</div>
-					<div class="state">-等待中-</div>
-					<div class="name">马宝存</div>
-					<div class="job">Dev</div>
-				</li>
-				<li class="item">
-					<div class="room">201</div>
-					<div class="state">-等待中-</div>
-					<div class="name">马宝存</div>
-					<div class="job">Dev</div>
-				</li>
-				<li class="item">
 					<div class="room">201</div>
 					<div class="state">-等待中-</div>
 					<div class="name">马宝存</div>
