--- a/src/main/webapp/WEB-INF/vm/add_student.vm
+++ b/src/main/webapp/WEB-INF/vm/add_student.vm
@@ -112,7 +112,7 @@
 								<label class="control-label">应聘职位</label>
 								<div class="controls">
 									<select name="job" id="job">
-										<option value="DEV">DEV</option>
+										<option value="RD">RD</option>
 										<option value="QA">QA</option>
 										<option value="FE">FE</option>
 									</select>
